--- a/mvc/WebContent/WEB-INF/web.xml
+++ b/mvc/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>mvc</display-name>
+  <display-name>jee</display-name>
   <servlet>
     <servlet-name>appServlet</servlet-name>
     <servlet-class>*</servlet-class>
@@ -29,15 +29,15 @@
   </jsp-config>
   <error-page>
     <error-code>404</error-code>
-    <location>/WEB-INF/error/error_404.jsp</location>
+    <location>/WEB-INF/error/error404.jsp</location>
   </error-page>
   <error-page>
     <error-code>500</error-code>
-    <location>/error/error_500.jsp</location>
+    <location>/WEB-INF/error/error500.jsp</location>
   </error-page>
   <error-page>
     <exception-type>java.lang.NullPointerException</exception-type>
-    <location>/error/error.NullPointer.jsp</location>
+    <location>/WEB-INF/error/errorNullPointer.jsp</location>
   </error-page>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
