--- a/mvc/.classpath
+++ b/mvc/.classpath
@@ -8,15 +8,11 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_92">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/eclipse/eclipse/cos.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/eclipse/jstl.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/eclipse/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/eclipse/standard.jar"/>
-	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/eclipse/cos.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/eclipse/jstl.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/eclipse/servlet-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/eclipse/standard.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
